centered blockquotes, changed open graph image

--- a/02-nghiep-dan-di-trong-luan-hoi-luc-dao.Rmd
+++ b/02-nghiep-dan-di-trong-luan-hoi-luc-dao.Rmd
@@ -144,10 +144,12 @@ Vậy, chủ yếu của việc tu hành, chẳng những tạo nghiệp lành t
   
 Thiền Sư Ô Sào ở trên nói xuống:  
   
+<div class="align-center">
 > Chư ác mạc tác  
 > Chúng thiện phụng hành  
 > Tự tịnh ká ý  
 > Thị chư Phật giáo  
+</div>
   
 Ông hãy về tu đi!  
   
