--- a/07-tu-co-chuyen-duoc-nhan-qua-khong.Rmd
+++ b/07-tu-co-chuyen-duoc-nhan-qua-khong.Rmd
@@ -99,8 +99,10 @@ Hoặc có người khi giận con thì chửi ông cố nội, ông cố ngoạ
   
 Vì sân si mà chúng ta không nhận biết điều phải lẽ trái, cứ làm bậy, nói bậy, khiến cho thiên hạ chê cười. Nên ca dao Việt Nam có câu:  
   
+<div class="align-center">  
 > Sân si nghiệp chướng không chừa,  
 > Bo bo mà giữ tương dưa làm gì  
+</div>
   
 Tu mà không chịu bỏ tham, bỏ sân, bỏ si mà cứ khoe "tôi ăn chay một tháng mười ngày, 15 ngày v.v..." Ăn chay, ăn tương dưa là để chừa tham, sân, si. Có chừa bỏ được tham, sân, si thì tâm mới sáng suốt. Tâm sáng suốt thì không nói bậy, làm bậy. Không nói bậy, làm bậy thì nghiệp chướng theo đó mà giảm. Nếu không chừa bỏ tham, sân, si thì nghiệp chướng tội lỗi khó mà hết được.  
   
@@ -142,8 +144,10 @@ Theo Bà Liên Hoa Sắc thì nếu tu phạm giới bị đọa hết quả bá
   
 Tới đây, tôi xin đi xa một chút là trình bày lý nhân quả theo tinh thần thiền tông. Trong *"Chứng Đạo Ca"* của Thiền Sư Huyền Giác có hai câu:  
   
+<div class="align-center">  
 > Liễu, tức nghiệp chướng bổn lai không,  
 > Vị liễu, ưng tu hoàn túc trái  
+</div>
   
 Nếu liễu ngộ thì nghiệp chướng xưa nay là không, còn nếu chưa liễu ngộ thì phải đền nợ trước. Những nhân ác, những nghiệp bất thiện đã gây tạo từ trước, nếu tu hành không liễu ngộ thì phải trả đủ. Còn nếu tu mà liễu ngộ được thì nghiệp chướng cũ theo đó mà hóa giải không còn.  
   
